# Kinesthesis-2.0

./: INSTALLATION.md  Kinesthesis2.0.maxpat  README.md  pyproject.toml  requirements.txt  setup.py
