[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinesthesis-2.0"
version = "1.0.0"
description = "Gesture-controlled interactive vocal augmentation system using MediaPipe and Max/MSP"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Telemachus Moussas", email = "your.email@example.com"}
]
keywords = [
    "gesture-recognition",
    "hand-tracking",
    "facial-landmarks",
    "OSC",
    "Max-MSP",
    "vocal-augmentation",
    "MediaPipe",
    "computer-vision"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "python-osc>=1.8.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
visualization = [
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/Kinesthesis-2.0"
"Bug Reports" = "https://github.com/yourusername/Kinesthesis-2.0/issues"
"Source" = "https://github.com/yourusername/Kinesthesis-2.0"
"Documentation" = "https://github.com/yourusername/Kinesthesis-2.0#readme"

[tool.setuptools]
packages = ["kinesthesis_2_0"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py10', 'py11']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
